--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dream.flying.flower</groupId>
@@ -40,6 +41,7 @@
 	</dependencyManagement>
 
 	<modules>
+		<module>dream-tool-annotation</module>
 		<module>dream-tool-core</module>
 		<module>dream-tool-generator</module>
 		<module>dream-tool-http</module>
