--- a/dream-tool-annotation/pom.xml
+++ b/dream-tool-annotation/pom.xml
@@ -27,7 +27,7 @@
 			<artifactId>tools</artifactId>
 			<version>1.8</version>
 			<scope>system</scope>
-			<systemPath>e:/java/jdk1.8/lib/tools.jar</systemPath>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
 		</dependency>
 	</dependencies>
 
