--- a/dream-tool-third/pom.xml
+++ b/dream-tool-third/pom.xml
@@ -18,6 +18,7 @@
 		<jaxen.version>1.2.0</jaxen.version>
 		<javax.mail.version>1.6.2</javax.mail.version>
 		<zxing.version>3.3.3</zxing.version>
+		<metadata-extractor.version>2.16.0</metadata-extractor.version>
 	</properties>
 
 	<dependencies>
@@ -56,11 +57,15 @@
 			<artifactId>javax.mail</artifactId>
 			<version>${javax.mail.version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
 			<version>${zxing.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>${metadata-extractor.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
