--- a/dream-tool-http/pom.xml
+++ b/dream-tool-http/pom.xml
@@ -12,7 +12,7 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<fastjson2.version>2.0.3</fastjson2.version>
+		<fastjson.version>1.2.83</fastjson.version>
 		<httpclient.version>4.5.6</httpclient.version>
 		<okhttp.version>4.9.1</okhttp.version>
 	</properties>
@@ -24,9 +24,9 @@
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.alibaba.fastjson2</groupId>
-			<artifactId>fastjson2</artifactId>
-			<version>${fastjson2.version}</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
