--- a/pom.xml
+++ b/pom.xml
@@ -11,174 +11,17 @@
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<commons-net.version>3.8.0</commons-net.version>
-		<dom4j.version>2.1.4</dom4j.version>
-		<fastjson2.version>2.0.34</fastjson2.version>
-		<httpclient.version>4.5.14</httpclient.version>
-		<itext.version>2.1.7</itext.version>
-		<itextpdf.version>5.5.13</itextpdf.version>
-		<jackson.version>2.15.2</jackson.version>
-		<jasperreports.version>6.19.1</jasperreports.version>
-		<javax.mail.version>1.6.2</javax.mail.version>
-		<jaxen.version>1.2.0</jaxen.version>
-		<javax.servlet-api.version>4.0.1</javax.servlet-api.version>
-		<jave-all-deps.version>2.7.3</jave-all-deps.version>
-		<jsch.version>0.1.55</jsch.version>
-		<jsoup.version>1.14.2</jsoup.version>
-		<lombok.version>1.18.20</lombok.version>
-		<metadata-extractor.version>2.16.0</metadata-extractor.version>
-		<okhttp3.version>4.11.0</okhttp3.version>
-		<olap4j.version>1.2.0</olap4j.version>
-		<opencsv.version>5.4</opencsv.version>
-		<pinyin4j.version>2.5.1</pinyin4j.version>
-		<poi.version>5.2.3</poi.version>
-		<slf4j.version>1.7.36</slf4j.version>
-		<swagger.version>1.5.21</swagger.version>
-		<zxing.version>3.3.3</zxing.version>
 	</properties>
 
 	<!-- 指定jar包版本,但并不是引用,只是为了统一版本,同时更新 -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>commons-net</groupId>
-				<artifactId>commons-net</artifactId>
-				<version>${commons-net.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.dom4j</groupId>
-				<artifactId>dom4j</artifactId>
-				<version>${dom4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.fastjson2</groupId>
-				<artifactId>fastjson2</artifactId>
-				<version>${fastjson2.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>jaxen</groupId>
-				<artifactId>jaxen</artifactId>
-				<version>${jaxen.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.httpcomponents</groupId>
-				<artifactId>httpclient</artifactId>
-				<version>${httpclient.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.itextpdf</groupId>
-				<artifactId>itextpdf</artifactId>
-				<version>${itextpdf.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.lowagie</groupId>
-				<artifactId>itext</artifactId>
-				<version>${itext.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-core</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>net.sf.jasperreports</groupId>
-				<artifactId>jasperreports</artifactId>
-				<version>${jasperreports.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.sun.mail</groupId>
-				<artifactId>javax.mail</artifactId>
-				<version>${javax.mail.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.mail</groupId>
-				<artifactId>javax.mail-api</artifactId>
-				<version>${javax.mail.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
-				<version>${javax.servlet-api.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>ws.schild</groupId>
-				<artifactId>jave-all-deps</artifactId>
-				<version>${jave-all-deps.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.jcraft</groupId>
-				<artifactId>jsch</artifactId>
-				<version>${jsch.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jsoup</groupId>
-				<artifactId>jsoup</artifactId>
-				<version>${jsoup.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-				<version>${lombok.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.drewnoakes</groupId>
-				<artifactId>metadata-extractor</artifactId>
-				<version>${metadata-extractor.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.squareup.okhttp3</groupId>
-				<artifactId>okhttp</artifactId>
-				<version>${okhttp3.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.olap4j</groupId>
-				<artifactId>olap4j</artifactId>
-				<version>${olap4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.opencsv</groupId>
-				<artifactId>opencsv</artifactId>
-				<version>${opencsv.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.belerweb</groupId>
-				<artifactId>pinyin4j</artifactId>
-				<version>${pinyin4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.poi</groupId>
-				<artifactId>poi</artifactId>
-				<version>${poi.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.poi</groupId>
-				<artifactId>poi-ooxml</artifactId>
-				<version>${poi.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.swagger</groupId>
-				<artifactId>swagger-annotations</artifactId>
-				<version>${swagger.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.zxing</groupId>
-				<artifactId>core</artifactId>
-				<version>${zxing.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.google.zxing</groupId>
-				<artifactId>javase</artifactId>
-				<version>${zxing.version}</version>
+				<groupId>dream.flying.flower</groupId>
+				<artifactId>dream-parent</artifactId>
+				<version>0.0.1</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -188,7 +31,6 @@
 		<module>dream-tool-core</module>
 		<module>dream-tool-generator</module>
 		<module>dream-tool-http</module>
-		<module>dream-tool-json</module>
 		<module>dream-tool-office</module>
 		<module>dream-tool-third</module>
 	</modules>
